--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,7 +9,7 @@
 
     
     <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="description" content="Perfect Notary Every Time, Notarize With Vivian">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 
     
@@ -22,6 +22,7 @@
     <link href="{% static 'css/animate.css' %}" rel="stylesheet" type="text/css"> 
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link rel="canonical" href="https://www.vivianrashidi.com/" />
 </head>
 <body>
 
@@ -51,8 +52,8 @@
 
                     
                     <div id="logo">
-                        <img src="{% static 'images/logo.svg' %}" id="banner-logo" alt="Landing Page"/>
-                        <img src="{% static 'images/logo.svg' %}" id="navigation-logo" alt="Landing Page"/>
+                        <img src="{% static 'images/logo.svg' %}" id="banner-logo" alt="Landing Page" width="512" height="34"/>
+                        <img src="{% static 'images/logo.svg' %}" id="navigation-logo" alt="Landing Page" width="512" height="34"/>
                     </div>
                     
                     <aside>
@@ -197,18 +198,18 @@
 <aside id="gallery" class="row text-center scrollto clearfix" data-featherlight-gallery
 data-featherlight-filter="a">
 
-<a href="{% static 'images/gallery-images/papersign.svg' %}" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.1s"><img src="{% static 'images/gallery-images/papersign.svg' %}" alt="Landing Page"/></a>
-<a href="{% static 'images/gallery-images/finalpic.svg' %}" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.3s"><img src="{% static 'images/gallery-images/finalpic.svg' %}" alt="Landing Page"/></a>
-<a href="{% static 'images/gallery-images/stackpaper.svg' %}" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.5s"><img src="{% static 'images/gallery-images/stackpaper.svg' %}" alt="Landing Page"/></a>
-<a href="{% static 'images/gallery-images/notarystamp.svg' %}" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="1.1s"><img src="{% static 'images/gallery-images/notarystamp.svg' %}" alt="Landing Page"/></a>
-<a href="{% static 'images/gallery-images/notaryred.svg' %}" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.9s"><img src="{% static 'images/gallery-images/notaryred.svg' %}" alt="Landing Page"/></a>
-<a href="{% static 'images/gallery-images/bluerevision.svg' %}" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.7s"><img src="{% static 'images/gallery-images/bluerevision.svg' %}" alt="Landing Page"/></a>
+<a loading="lazy" href="{% static 'images/gallery-images/papersign.svg' %}" width="896" height="500" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.1s"><img loading="lazy" src="{% static 'images/gallery-images/papersign.svg' %}" width="896" height="500" alt="Landing Page"/></a>
+<a loading="lazy" href="{% static 'images/gallery-images/finalpic.svg' %}" width="880" height="492" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.3s"><img loading="lazy" src="{% static 'images/gallery-images/finalpic.svg' %}" width="880" height="492" alt="Landing Page"/></a>
+<a loading="lazy" href="{% static 'images/gallery-images/stackpaper.svg' %}" width="896" height="500" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.5s"><img loading="lazy" src="{% static 'images/gallery-images/stackpaper.svg' %}" width="896" height="500" alt="Landing Page"/></a>
+<a loading="lazy" href="{% static 'images/gallery-images/notarystamp.svg' %}" width="1302" height="724" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="1.1s"><img loading="lazy" src="{% static 'images/gallery-images/notarystamp.svg' %}" width="1302" height="724" alt="Landing Page"/></a>
+<a loading="lazy" href="{% static 'images/gallery-images/notaryred.svg' %}" width="898" height="502" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.9s"><img loading="lazy" src="{% static 'images/gallery-images/notaryred.svg' %}" width="898" height="502" alt="Landing Page"/></a>
+<a loading="lazy" href="{% static 'images/gallery-images/bluerevision.svg' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.7s" width="880" height="492"><img loading="lazy" src="{% static 'images/gallery-images/bluerevision.svg' %}" alt="Landing Page" width="880" height="492"/></a>
 
 </aside>
 <!--End of Gallery-->
@@ -229,7 +230,7 @@ data-featherlight-filter="a">
                         <footer>— Ken Salazar, American Politician</footer>
                     </blockquote>
                     <!-- End of Testimonial-->
-                    <img src="{% static 'images/gold_stamp.svg' %}" alt="Landing Page"/>
+                    <img loading="lazy" src="{% static 'images/gold_stamp-min.png' %}" alt="Landing Page" width="2268" height="3024"/>
                 </div>
                 <!--End Content Left Side-->
                 
@@ -263,7 +264,7 @@ data-featherlight-filter="a">
                 <!--End Content Right Side-->
 
                 <div class="col-3">
-                    <img data-enllax-ratio=".5" data-enllax-type="foreground" class="resize" src="{% static 'images/penNew.svg' %}" alt="pen"/>
+                    <img loading="lazy" data-enllax-ratio=".5" data-enllax-type="foreground" class="resize" src="{% static 'images/penNew.svg' %}" alt="pen" width="1500" height="894"/>
                     
                 </div>
                 
@@ -289,7 +290,7 @@ data-featherlight-filter="a">
                 <h3>Spring Hill Real Estate</h3>
                 <br><p class="pricing-sub">Search, compare, and choose from a variety of properties including homes, condos, and land for sale.</p>
                 <div class="pricing">
-                    <div class="price"><img style="width: 180px;height 180px;" src="{% static 'images/company-images/springhill.svg'%}"/></div>
+                    <div class="price"><img loading="lazy" style="width: 180px;height 180px;" src="{% static 'images/company-images/springhill.svg'%}" width="1200" height="1200"/></div>
                 </div>
                 
                 <a href="https://www.brightmlshomes.com/vivian-rashidi" class="button">Visit Website</a>
@@ -306,7 +307,7 @@ data-featherlight-filter="a">
                 <br><p class="pricing-sub"> Visit our website to explore our services and schedule your appointment today.     
                 </p>
                 <div class="pricing">
-                    <div class="price"><img style="height: 180px;" class="nna" src="{% static 'images/company-images/nna.svg'%}"/></div>
+                    <div class="price"><img loading="lazy" style="height: 180px;" class="nna" src="{% static 'images/company-images/nna.svg'%}" width="692" height="519"/></div>
                 </div>
                 
                 <a href="https://viviansniviconotaryservices.com/" class="button">Visit Website</a>
@@ -322,7 +323,7 @@ data-featherlight-filter="a">
                 <h3>Notary Cafe</h3>
                 <br><p class="pricing-sub"> Connects individuals in need of a professional notary with experienced notaries who can assist them.</p>
                 <div class="pricing">
-                    <div class="price"><img style="height: 180px;"src="{% static 'images/company-images/notarycafe.svg'%}"/></div>
+                    <div class="price"><img loading="lazy" style="height: 180px;"src="{% static 'images/company-images/notarycafe.svg'%}" width="177" height="177"/></div>
                 </div>
                 <a href="https://notarycafe.com/vivian.rashidi" class="button">Visit Website</a>
             </div>
@@ -354,7 +355,6 @@ data-featherlight-filter="a">
 
                 <!--User Testimonial-->
                 <blockquote class="col-3 testimonial classic">
-                    <h3><strong>Nivico Notary Services</strong></h3>
                     <p>
                         <br><strong>Alexandria, Virginia, United States</strong></br>
 
@@ -395,7 +395,7 @@ data-featherlight-filter="a">
     <!--Footer-->
     <footer id="landing-footer" class="clearfix">
         <div class="row clearfix">
-            <img src="{% static 'images/vivian_footer.svg' %}" alt="Landing Page"/>
+            <img loading="lazy" src="{% static 'images/vivian_footer.svg' %}" alt="Landing Page" width="2532" height="975"/>
             <!--Social Icons in Footer-->
             <div class="col-2">
             </div>
